--- a/issue278/test1.html
+++ b/issue278/test1.html
@@ -10,6 +10,8 @@
 <a href="" class="am-icon-btn am-icon-twitter"></a>
 <a href="" class="am-icon-btn am-icon-facebook"></a>
 <a href="" class="am-icon-btn am-icon-github"></a>
-
+<hr/>
+<div id="font-info"></div>
+<script src="main.js"></script>
 </body>
 </html>
