--- a/issue278/index.html
+++ b/issue278/index.html
@@ -11,5 +11,10 @@
 <a href="" class="am-icon-btn am-icon-facebook"></a>
 <a href="" class="am-icon-btn am-icon-github"></a>
 
+<hr/>
+
+<div id="font-info"></div>
+
+<script src="main.js"></script>
 </body>
 </html>
