--- a/issue278/test1.html
+++ b/issue278/test1.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Icon Test</title>
   <link rel="stylesheet" href="style1.css"/>
+  <style>
+    body {
+      padding: 10px;
+    }
+  </style>
 </head>
 <body>
 <h1>CDN 字体</h1>
