--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
-  <title>Tests by amazeui</title>
+  <meta http-equiv="refresh" content="0; url=http://amazeui.org/" />
+  <title>Amaze UI</title>
   <meta name="viewport"
         content="width=device-width, initial-scale=1, user-scalable=no">
 </head>
 <body>
 <header>
-  <h1>Tests</h1>
+  <h1>loading...</h1>
 </header>
 </body>
 </html>
